--- a/Estructura Poblacional.Rmd
+++ b/Estructura Poblacional.Rmd
@@ -25,49 +25,35 @@ knitr::include_graphics("QUETA.jpg")
 
 #BASE DE DATOS 
 ```{r}
-BD_General <- read_excel("BD_General_Cuencas.xlsx", 
-         # col_types = c("numeric", "text", "numeric", 
-         # "text", "text", "text", "text", "text", 
-         # "numeric", "numeric", "numeric", 
-         # "numeric", "text", "numeric", "text", 
-         # "text", "text", "text", "numeric", 
-         # "text", "text", "numeric", "numeric", 
-         # "text", "text", "text", "text", "numeric", 
-         # "text","text"), 
-        skip = 2)
-  
-
+BD_General <- read_excel("BD_General.xlsx", 
+    col_types = c("numeric", "text", "numeric", 
+        "text", "text", "text", "text", "text", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "text", "numeric", "text", 
+        "text", "text", "text", "numeric", 
+        "text", "text", "numeric", "numeric", 
+        "text", "text", "text", "text", "numeric", 
+        "text"), skip = 2)
 BD_General
 ```
 #Composición de la tropa por Edad
 ```{r}
 BD_General |> 
-    group_by(Edad_r) |> 
-    summarise(cantidad = n()) |> 
-    mutate(proporcion = cantidad/sum(cantidad)*100,) %>%
+  group_by(Edad_r) |> 
+  summarise(cantidad = n()) |> 
+  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
 gt() %>%
-    fmt_number(
-    columns =c(proporcion),
-    decimals = 2,
-    dec_mark = ",",
-    sep_mark = "."
-    )%>%
-tab_header(title = "Cantidad y Porcentaje de animales según edad")
-
-
+  tab_header(title = "Cantidad y Porcentaje de animales según edad")
 ```
-
 
 #Gráfico de la Composición de la tropa según Edad
 ```{r}
 BD_General |> 
   group_by(Edad_r) |> 
   summarise(cantidad = n()) |> 
-  mutate(proporcion = cantidad/sum(cantidad)*100,) %>%
-  
+  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
 ggplot() +
-  geom_col(aes(x = Edad_r, y = proporcion, fill = Edad_r),position = "dodge", alpha = 0.8)+
-  geom_text(aes(x = Edad_r, y = proporcion,label = proporcion), position =position_stack(), size=4, vjust=2, hjust=0.5, col="black")
+  geom_col(aes(x = Edad_r, y = proporcion, fill = Edad_r),position = "dodge", alpha = 0.8)
 ```
 
 #Composición de la tropa según Sexo
@@ -77,28 +63,16 @@ BD_General |>
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100) %>%
 gt() %>%
-  fmt_number(
-    columns =c(proporcion),
-    decimals = 2,
-    dec_mark = ",",
-    sep_mark = "."
-    )%>%
   tab_header(title = "Frencuencia y Porcentaje de Machos, Hembras y Capones")
 ```
 
-#composición de la tropa según Edad y Sexo
+#Composición de la tropa según Edad y Sexo
 ```{r}
 BD_General |> 
   group_by(Sexo, Edad_r) |> 
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100) %>%
 gt() %>%
-  fmt_number(
-    columns =c(proporcion),
-    decimals = 2,
-    dec_mark = ",",
-    sep_mark = "."
-    )%>%
   tab_header(title = "Frencuencia y Porcentaje de Machos, Hembras y Capones")
 ```
 
@@ -111,12 +85,6 @@ BD_General |>
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100) %>%
   gt() %>%
-  fmt_number(
-    columns =c(proporcion),
-    decimals = 2,
-    dec_mark = ",",
-    sep_mark = "."
-    )%>%
   tab_header(title = "Frecuencia y Porcentaje de Tipo de Mecha")
 ```
 
@@ -128,12 +96,6 @@ BD_General |>
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100) %>%
 gt() %>%
-  fmt_number(
-    columns =c(proporcion),
-    decimals = 2,
-    dec_mark = ",",
-    sep_mark = "."
-    )%>%
   tab_header(title = "Frecuencia y Porcentaje de Color de Fibra")
 ```
 
@@ -147,7 +109,6 @@ BD_EP
 group_by(BD_EP) %>%
   summarise_all(mean, na.rm = TRUE) %>%
   gt() %>%
-  
 tab_header(title = "Promedio de Medidas Zoométricas y Condición Corporal")
 ```
 
@@ -156,7 +117,6 @@ tab_header(title = "Promedio de Medidas Zoométricas y Condición Corporal")
 group_by(BD_EP) %>%
   summarise_all(sd, na.rm = TRUE) %>%
   gt() %>%
-  
   tab_header(title = "Desvío Estándar de Medidas Zoométricas y Condición Corporal")
 ```
 
@@ -180,12 +140,6 @@ BD_General |>
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100) %>%
 gt() %>%
-  fmt_number(
-    columns =c(proporcion),
-    decimals = 2,
-    dec_mark = ",",
-    sep_mark = "."
-    )%>%
   tab_header(title = "Frecuencia y Porcentaje de Finura de Fibra")
 ```
 
@@ -196,18 +150,51 @@ BD_General|>
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100) %>%
 gt() %>%
-  fmt_number(
-    columns =c(proporcion),
-    decimals = 2,
-    dec_mark = ",",
-    sep_mark = "."
-    )%>%
   tab_header(title = "Frecuencia y Porcentaje de Morfotipo")
 ```
 
 #Tabla de Finura de Fibra y Condición Corporal
 ```{r}
-BD_EP1 <- select(BD_General, "Condición Corporal", "DM FLc2022")
+BD_EP1 <- select(BD_General, "Condición Corporal", "DM FLc2022", "Sexo")
 BD_EP1
 ```
+
+```{r}
+BD_EP1 |> 
+  group_by(Sexo) |> 
+  summarise(cantidad = n()) |> 
+  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
+gt() %>%
+  tab_header(title = "Frencuencia y Porcentaje de Machos, Hembras y Capones")
+ 
+  
+```
+
+```{r}
+BD_EP1 |> 
+  group_by(Sexo) |> 
+  summarise(cantidad = n()) |> 
+  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
+ ggplot(aes(x = cantidad, y = proporcion)) +
+  geom_col(aes(fill = Sexo))
+  
+```
+#En el gráfico precedente se observa que el 86,8% de los datos corresponden a la categoria "Hembras". Sin embargo se debe centrar el análisis en la calidad de fibra de los machos que representan el 6,91% , esto debido a que cada macho reproductor sirve en promedio a 30 hembras.
+
+#Analizar la Condición Corporal de los machos
+```{r}
+BD_EP2 <- select(BD_General, "Condición Corporal", "DM FLc2022")
+BD_EP2
+```
+```{r}
+group_by(BD_EP2) %>%
+  summarise(cantidad = n()) |> 
+  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
+  gt() %>%
+  tab_header(title = "Promedio de Condición Corporal, Finura de Fibra")
+```
+
+
+
+#La Condición Corporal de los machos se puede calificar de ............, la importancia del análisis es poder concluir si se encuentran en condiciones de servir como promedio de 30 hembras.
 
