--- a/Estructura Poblacional.Rmd
+++ b/Estructura Poblacional.Rmd
@@ -17,7 +17,7 @@ library(tidyverse)
 library(rstatix)
 library(gt)
 library(plotrix)
-library(RcmdrPlugin.NMBU)
+#library(RcmdrPlugin.NMBU)
 
 ```
 
@@ -45,7 +45,7 @@ BD_General <- read_excel("BD_General.xlsx",
         "text", "text", "text", "numeric", 
         "text", "text", "numeric", "numeric", 
         "text", "text", "text", "text", "numeric", 
-        "text"), skip = 2)
+        "text"))
 BD_General
 ```
 ### Composición de la tropa por Edad
@@ -89,60 +89,10 @@ gt() %>%
 ```
 
 
-### Frecuencia y Porcentaje de tipo de Mecha
-
-```{r}
-BD_General |>
-  group_by(TM_r) |> 
-  summarise(cantidad = n()) |> 
-  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
-  gt() %>%
-  tab_header(title = "Frecuencia y Porcentaje de Tipo de Mecha")
-```
 
 
-### Frecuencia y Porcentaje de Color
-```{r}
-BD_General |>
-  group_by(CM_r) |> 
-  summarise(cantidad = n()) |> 
-  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
-gt() %>%
-  tab_header(title = "Frecuencia y Porcentaje de Color de Fibra")
-```
 
-### Tabla de Medidas Zoométricas y Condición Corporal
-```{r}
-BD_EP <- select(BD_General, "PT", "PH", "A", "Condicion_Corporal")
-BD_EP
-```
-### Promedio de Medidas Zoometrícas y Condición Corporal
-```{r}
-group_by(BD_EP) %>%
-  summarise_all(mean, na.rm = TRUE) %>%
-  gt() %>%
-tab_header(title = "Promedio de Medidas Zoométricas y Condición Corporal")
-```
 
-### Desvío Estándar de Medidas Zoométricas y Condición Corporal
-```{r}
-group_by(BD_EP) %>%
-  summarise_all(sd, na.rm = TRUE) %>%
-  gt() %>%
-  tab_header(title = "Desvío Estándar de Medidas Zoométricas y Condición Corporal")
-```
-
-### Varianza de Medidas Zoométricas y Condición Corporal
-```{r}
-group_by(BD_EP) %>%
-  summarise_all(var, na.rm = TRUE) %>%
-  gt() %>%
-  tab_header(title = "Varianza de Medidas Zoométricas y Condición Corporal")
-```
-
-### Error Estándar de Medidas Zoométricas y Condición Corporal
-```{r}
-#std.error(BD_VT)
 ```
 
 ### Frecuencia y Porcentaje de Finura de Fibra
@@ -155,15 +105,7 @@ gt() %>%
   tab_header(title = "Frecuencia y Porcentaje de Finura de Fibra")
 ```
 
-### Frecuencia y Porcentaje de Morfotipo
-```{r}
-BD_General|>
-  group_by(Morfotipo) |> 
-  summarise(cantidad = n()) |> 
-  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
-gt() %>%
-  tab_header(title = "Frecuencia y Porcentaje de Morfotipo")
-```
+
 
 ### Tabla de Finura de Fibra y Condición Corporal
 ```{r}
@@ -195,17 +137,27 @@ BD_EP1 |>
 
 ### Analizar la Condición Corporal de los machos
 ```{r}
-BD_EP2 <- select(BD_General, "Condicion_Corporal", "DM_FLc2022")
+BD_EP2 <- select(BD_General, "Condicion_Corporal", "DM_FLc2022", "Edad")
 BD_EP2
 ```
 ```{r}
-group_by(BD_EP2) %>%
-  summarise(cantidad = n()) |> 
-  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
-  gt() %>%
-  tab_header(title = "Promedio de Condición Corporal, Finura de Fibra")
+ggplot(BD_General, aes(x=Edad_r, y=DM_FLc2022)) +
+  geom_point(aes(color = Edad_r))
+ 
+  
 ```
 
+```{r}
+ggplot(BD_General, aes(x=Edad_r, y=DM_FLc2022)) +
+  geom_boxplot()
+```
+
+#Análisis de la Relación entre Edad y Diámetro de la fibra
+```{r}
+ggplot(BD_General, aes(x=Edad_r, y=DM_FLc2022)) +
+  geom_violin(aes(color = Edad_r, fill = Edad_r))
+```
+#
 
 
 La Condición Corporal de los machos se puede calificar de ............, la importancia del análisis es poder concluir si se encuentran en condiciones de servir como promedio de 30 hembras.
