--- a/Estructura Poblacional2.Rmd
+++ b/Estructura Poblacional2.Rmd
@@ -17,8 +17,8 @@ library(tidyverse)
 library(rstatix)
 library(gt)
 library(plotrix)
-#library(RcmdrPlugin.NMBU)
-
+library(RcmdrPlugin.NMBU)
+library(NbClust)
 ```
 
 ```{r}
@@ -50,14 +50,12 @@ BD_General
 ```
 Se seleccionan las variables sobre las cuales se aplicará PCA
 ```{r}
-BD_EP3 <- BD_General %>% 
-  # Existen datos faltantes. Son pocos departamentos (baja población). 
-  # Se eliminan para no imputar valores y distorcionar el análisis. 
-  #filter(!is.na(ind01)) %>% 
-  # Se seleccionan las variables relevantes, renommbrandolas. 
+BD_EP1 <- BD_General %>% 
+  
   dplyr::select( Edad_r, Sexo, Condicion_Corporal, DM_FLc2022)%>% 
-  rename(Edad_r= Edad_Real, Diametro_Fibra = DM_FLc2022)  
-BD_EP3
+  rename(Edad_Real= Edad_r, Diametro_Fibra = DM_FLc2022) 
+  
+BD_EP1
 ```
 Se cuenta con 4 variables y 1474 observaciones, donde cada observación corresponde a la descripción de cada llama segun el sexo, la edad, la condicion corporal y la calidad de la fibra
 
@@ -67,30 +65,33 @@ Análisis de la población muestra
 
 ### Composición de la tropa por Edad
 ```{r}
-BD_General |> 
-  group_by(Edad_r) |> 
+BD_EAg <- BD_EP1 |> 
+  group_by(Edad_Real) |> 
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100,
       proporcion=round(proporcion, 2)   )%>%
 
 gt() %>%
   tab_header(title = "Cantidad y Porcentaje de animales según edad")
+BD_EAg
+```
+```{r}
+
 ```
 
 ### Gráfico de la Composición de la tropa según Edad
 ```{r}
-BD_General |> 
-  group_by(Edad_r) |> 
+BD_EP1 |> 
+group_by( Edad_Real) |> 
   summarise(cantidad = n()) |> 
-  mutate(proporcion = cantidad/sum(cantidad)*100, 
-         proporcion=round(proporcion, 2) ) %>%
+  mutate(proporcion = cantidad/sum(cantidad)*100, proporcion=round(proporcion, 2) ) %>%
 ggplot() +
-  geom_col(aes(x = Edad_r, y = proporcion, fill = Edad_r),position = "dodge", alpha = 0.8)
+  geom_col(aes(x = Edad_Real, y = proporcion, fill = Edad_Real),position = "dodge", alpha = 0.8)
 ```
 
 ### Composición de la tropa según Sexo
 ```{r}
-BD_General |> 
+BD_EP1 |> 
   group_by(Sexo) |> 
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100, proporcion=round(proporcion, 2) ) %>%
@@ -100,8 +101,8 @@ gt() %>%
 
 ### Composición de la tropa según Edad y Sexo
 ```{r}
-BD_General |> 
-  group_by(Sexo, Edad_r) |> 
+BD_EP1 |> 
+  group_by(Sexo, Edad_Real) |> 
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100, proporcion=round(proporcion, 2) ) %>%
 gt() %>%
@@ -112,40 +113,40 @@ gt() %>%
 
 
 
-
-```
-
 ### Frecuencia y Porcentaje de Finura de Fibra
 ```{r}
-BD_General |>
-  group_by(FM) |> 
-  summarise(cantidad = n()) |> 
-  mutate(proporcion = cantidad/sum(cantidad)*100, proporcion=round(proporcion, 2) ) %>%
-gt() %>%
-  tab_header(title = "Frecuencia y Porcentaje de Finura de Fibra")
+ # BD_EP1 %>% 
+ #   group_by(FM) %>%   #esta variable no la estamos trabajando
+ #   summarise(cantidad = n()) %>%  
+ #   mutate(proporcion = cantidad/sum(cantidad)*100, proporcion=round(proporcion, 2) ) %>%  
+ # gt() %>% 
+ # tab_header(title = "Frecuencia y Porcentaje de Finura de Fibra") 
 ```
+
 
 
 
 ### Tabla de Finura de Fibra y Condición Corporal
+
 ```{r}
-BD_EP1 <- select(BD_General, "Condicion_Corporal", "DM_FLc2022", "Sexo")
-BD_EP1
+
+BD_EP4 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra", "Sexo")
+  
+head(BD_EP4)
 ```
 
 ```{r}
-BD_EP1 |> 
+BD_EP4 |> 
   group_by(Sexo) |> 
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100, proporcion=round(proporcion, 2) ) %>%
 gt() %>%
   tab_header(title = "Frencuencia y Porcentaje de Machos, Hembras y Capones")
- 
   
 ```
-
+std.error(BD_EP)
 ```{r}
-BD_EP1 |> 
+BD_EP4 |> 
   group_by(Sexo) |> 
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100, proporcion=round(proporcion, 2) ) %>%
@@ -157,28 +158,47 @@ BD_EP1 |>
 
 ### Analizar la Condición Corporal de los machos
 ```{r}
-BD_EP2 <- select(BD_General, "Condicion_Corporal", "DM_FLc2022", "Edad")
+BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra", "Edad_Real")
 BD_EP2
 ```
 ```{r}
-ggplot(BD_General, aes(x=Edad_r, y=DM_FLc2022)) +
-  geom_point(aes(color = Edad_r))
+ggplot(BD_EP1, aes(x=Edad_Real, y=Diametro_Fibra)) +
+  geom_point(aes(color = Edad_Real))
  
   
 ```
 
 ```{r}
-ggplot(BD_General, aes(x=Edad_r, y=DM_FLc2022)) +
+ggplot(BD_EP1, aes(x=Edad_Real, y=Diametro_Fibra)) +
   geom_boxplot()
 ```
 
 #Análisis de la Relación entre Edad y Diámetro de la fibra
 ```{r}
-ggplot(BD_General, aes(x=Edad_r, y=DM_FLc2022)) +
-  geom_violin(aes(color = Edad_r, fill = Edad_r))
+ggplot(BD_EP1, aes(x=Edad_Real, y=Diametro_Fibra)) +
+  geom_violin(aes(color = Edad_Real, fill = Edad_Real))
 ```
 #
 
 
 La Condición Corporal de los machos se puede calificar de ............, la importancia del análisis es poder concluir si se encuentran en condiciones de servir como promedio de 30 hembras.
+
+
+### Analizar la Condición Corporal de los machos
+
+```{r}
+BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra")
+BD_EP2
+```
+
+```{r}
+BD_EP2%>%
+group_by(Condicion_Corporal) %>%
+  summarise(cantidad = n()) |> 
+  mutate(proporcion = cantidad/sum(cantidad)*100) %>%
+  gt() %>%
+  tab_header(title = "Promedio de Condición Corporal, Finura de Fibra")
+```
+  
+  
 
