--- a/Estructura Poblacional2.Rmd
+++ b/Estructura Poblacional2.Rmd
@@ -19,6 +19,7 @@ library(gt)
 library(plotrix)
 library(RcmdrPlugin.NMBU)
 library(NbClust)
+library("cluster")
 ```
 
 ```{r}
@@ -86,7 +87,8 @@ group_by( Edad_Real) |>
   summarise(cantidad = n()) |> 
   mutate(proporcion = cantidad/sum(cantidad)*100, proporcion=round(proporcion, 2) ) %>%
 ggplot() +
-  geom_col(aes(x = Edad_Real, y = proporcion, fill = Edad_Real),position = "dodge", alpha = 0.8)
+  geom_col(aes(x = Edad_Real, y = proporcion, fill = Edad_Real),position = "dodge", alpha = 0.8)+
+   geom_text(aes(x = Edad_Real, y = proporcion,label = proporcion), position =position_stack(), size=4, vjust=2, hjust=0.5, col="black")
 ```
 
 ### Composición de la tropa según Sexo
@@ -158,9 +160,32 @@ BD_EP4 |>
 
 ### Analizar la Condición Corporal de los machos
 ```{r}
-BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra", "Edad_Real")
+
+
+BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra", "Edad_Real")%>%
+  group_by(Edad_Real)%>%
+  summarise(Frecuencia=length(Condicion_Corporal), 
+            Media_CC=mean(Condicion_Corporal,na.rm = TRUE),Media_CC=round(Media_CC, 2), 
+            #promedio_peso = round(mean(masa_corporal_g/1000, na.rm = TRUE), 2))
+            Media_DF=mean(Diametro_Fibra,na.rm = TRUE),Media_DF=round(Media_DF, 2),
+            Desvio_CC=sd(Condicion_Corporal,na.rm = TRUE),Desvio_CC=round(Desvio_CC, 2),
+            Desvio_DF=sd(Diametro_Fibra,na.rm = TRUE),Desvio_DF=round(Desvio_DF, 2),
+            Max_CC=max(Condicion_Corporal,na.rm = TRUE),Max_CC=round(Max_CC, 2),
+            Max_DF=max(Diametro_Fibra,na.rm = TRUE),Max_DF=round(Max_DF, 2),
+            Min_CC=min(Condicion_Corporal,na.rm = TRUE),Min_CC=round(Min_CC, 2),
+            Min_DF=min(Diametro_Fibra,na.rm = TRUE),Min_DF=round(Min_DF, 2),
+            Varianza_CC=var(Condicion_Corporal,na.rm = TRUE),Varianza_CC=round(Varianza_CC, 2),
+            Varianza_DF=var(Diametro_Fibra,na.rm = TRUE),Varianza_DF=round(Varianza_DF, 2))
+  
 BD_EP2
 ```
+```{r}
+BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra", "Edad_Real")
+
+BD_EP2
+```
+
+
 ```{r}
 ggplot(BD_EP1, aes(x=Edad_Real, y=Diametro_Fibra)) +
   geom_point(aes(color = Edad_Real))
@@ -191,6 +216,8 @@ BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra")
 BD_EP2
 ```
 
+
+
 ```{r}
 BD_EP2%>%
 group_by(Condicion_Corporal) %>%
@@ -199,6 +226,255 @@ group_by(Condicion_Corporal) %>%
   gt() %>%
   tab_header(title = "Promedio de Condición Corporal, Finura de Fibra")
 ```
+  ## *****************************************Dataset
+##ESTRUCTURA
+#visualizo dataset, primera impresión
+
+
+#dimensión 
+
+```{r}
+dim(BD_EP1)
+ncol(BD_EP1)
+nrow(BD_EP1)
+```
+
+```{r}
+attributes(BD_EP1)
+attr(BD_EP1,"names") 
+attr(BD_EP1,"class")  
+```
+
+
+
+
+## *****************************************EDA & dataviz
+##DESCRIPCIÓN
+#columnas, nombres de variables
+
+```{r}
+names(BD_EP1)
+#names(BD_EP1)[0]
+```
+
+
+
+"PLOT Características
+ cex: circle size
+ xlim and ylim: limits of the X and Y axis
+ pch: shape of markers. See all here.
+ xlab and ylab: X and Y axis labels
+ col: marker color
+ main: chart title"
+
+#histograma, frecuencia
+
+```{r}
+hist(BD_EP1$Condicion_Corporal,
+     col='blue',
+     main='histograma Condición Corporal (C)',
+     xlab='Length',
+     ylab='Frequency')
+
+hist(BD_EP1$Diametro_Fibra,
+     col='green',
+     main='histograma Diametro Fibra (D)',
+     xlab='Length',
+     ylab='Frequency')
+
+
+```
+
+#summarize del dataset, distribución, boxplot
+```{r}
+summary(BD_EP1)
+```
+
+
+#calculo medias
+```{r}
+BD_EP1_means <- aggregate(BD_EP1$Condicion_Corporal,    
+                        list(BD_EP1$Edad_Real),
+                        mean)
+```
+
+
+#boxplots comparados =)
+```{r}
+boxplot(BD_EP1$Condicion_Corporal ~ BD_EP1$Edad_Real,    
+        col = 1:3)
+points(x = 1:nrow(BD_EP1_means),
+       y = BD_EP1_means$x,
+       pch = 16,
+       col = "white")
+text(x = 1:nrow(BD_EP1_means),
+     y = BD_EP1_means$x + 1.2,
+     labels = round(BD_EP1_means$x, 2),
+     col = "white")
+```
+
+
+#boxplot
+```{r}
+boxplot(Condicion_Corporal~Edad_Real,
+        data=BD_EP1,
+        main='Condición Corporal (C) según Edad_Real',
+        xlab='Edad_Real',
+        ylab='Condición Corporal (C)',
+        col='steelblue',
+        border='black')
+
+```
+
+#boxplots con ggplot
+#detalles en: https://www.datanovia.com/en/blog/ggplot-aes-how-to-assign-aesthetics-in-ggplot2/
+
+```{r}
+ggplot(BD_EP1,                                  
+       aes(x = Edad_Real,
+           y = Condicion_Corporal,
+           fill = Edad_Real)) +
+  geom_boxplot() +
+  stat_summary(fun = mean,
+               col = "white",
+               geom = "point") +
+  stat_summary(fun = mean,
+               col = "white",
+               geom = "text",
+               vjust = - 1,
+               aes(label = round(..y.., digits = 2)))
+```
+
+
+
+#scatterplot 
+```{r}
+plot(BD_EP1$Diametro_Fibra, BD_EP1$Condicion_Corporal,
+     col='steelblue',
+     main='Scatterplot',
+     xlab='Diametro Fibra (D)',
+     ylab='Condicion Corporal (C)',
+     pch=19)
+```
+
+
+
+## ****************************************Clustering con K-Means
+## Dar un parámetro K: # de centroides
+## Cómo lo calculo?
+
+# el gráfico de dispersión puede ayudar a 
+# identificar grupos y relaciones
+
+```{r}
+ggplot(BD_EP1, aes(Condicion_Corporal,Diametro_Fibra )
+       ) + geom_point(size=4)
+```
+
+
+
+
+# con tonos según especie
+
+```{r}
+ggplot(BD_EP1, aes(Condicion_Corporal,Diametro_Fibra)
+       ) + geom_point(aes(col=Edad_Real), size=4)
+```
+# SETOSA se agrupará más fácilmente
+# (también se diferencia más facilmente)
+# VERSICOLOR y VIRGICA, similares? unidas? las mismas?
+
+# K-Means ya está incluido
+# fijo una semilla
+```{r}
+set.seed(500)
+```
+# modelo con un k=2
+```{r}
+BD_EP1Cluster2 <- kmeans(BD_EP1[,3:4], center=2, iter.max=10, nstart=20)
+BD_EP1Cluster2
+```
+# modelo con un k=3
+```{r}
+BD_EP1Cluster3 <- kmeans(BD_EP1[,3:4], center=3, nstart=20)
+BD_EP1Cluster3
+```
+
+
+
+
+
+# modelo con un k=5
+
+```{r}
+BD_EP1Cluster5 <- kmeans(BD_EP1[,3:4], center=5, nstart=20)
+BD_EP1Cluster5
+```
+
+
+
+# el modelo arroja lo siguiente por default:
+
+## CLUSTER MEANS:
+# los puntos optimizados (medias) de cada cluster estimado
+# en torno a los cuales se agruparán los casos (las clases)
+
+## CLUSTERING VECTOR:
+# es el vector resultante (estimaciones o etiquetas predichas)
+
+# SUMAS de diferencias cuadradas dentro (within), por cluster: 
+# Suerte de variabilidad explicada/capturada
+
+# lista de componentes calculados a consultar:
+#VER: https://cran.r-project.org/web/packages/healthyR/vignettes/kmeans-umap.html
+
+
+
+## *****************************************Comparar resultados
+# K=2
+# Comparo 1 vector predicho y las etiquetas originales
+
+```{r}
+table(BD_EP1Cluster2$cluster, BD_EP1$Edad_Real)
+clusplot(BD_EP1, BD_EP1Cluster2$cluster, color=T, shade=T, labels=0, lines=0)
+```
+
+
+# K=3
+# Comparo 1 vector predicho y las etiquetas originales
+```{r}
+table(BD_EP1Cluster3$cluster, BD_EP1$Edad_Real)
+clusplot(BD_EP1, BD_EP1Cluster3$cluster, color=T, shade=T, labels=0, lines=0)
+```
+
+# K=5
+# Comparo 1 vector predicho y las etiquetas originales
+```{r}
+table(BD_EP1Cluster5$cluster, BD_EP1$Edad_Real)
+clusplot(BD_EP1, BD_EP1Cluster5$cluster, color=T, shade=T, labels=0, lines=0)
+```
+
+"Qué observamos de cada especie?
+ Todas están explicadas por igual?
+ Cómo vemos los aciertos?"
+
+## *****************************************Evaluar resultados
+### Método (gráfico) del codo
+
+# genero un bucle para iterar posibles K
+
+```{r}
+tot.withinss <- vector(mode="character", length=10)
+for (i in 1:15){
+  BD_EP1Cluster <- kmeans(BD_EP1[,3:4], center=i, nstart=20)
+  tot.withinss[i] <- BD_EP1Cluster$tot.withinss
+}
+```
+
+
+```{r}
+plot(1:15, tot.withinss, type="b", pch=19)
+```
   
-  
+
 
