Agregando codigo matriz

--- a/Estructura Poblacional2.Rmd
+++ b/Estructura Poblacional2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Estructura Poblacional"
-author: "Claudia1930"
+author: "Claudia Oviedo, Marianela Pi, Leonardo"
 date: "2022-11-23"
 output: 
  html_document:
@@ -19,7 +19,13 @@ library(gt)
 library(plotrix)
 library(RcmdrPlugin.NMBU)
 library(NbClust)
-library("cluster")
+library(cluster)
+library(factoextra)
+library(DataExplorer)
+library(ggplot2)
+library(funModeling)
+library(tidyr)
+
 ```
 
 ```{r}
@@ -35,7 +41,7 @@ En este caso, la caracterización y cuantificación de la oferta poblacional se 
 
 
 
-## Exploración de los datos
+# I. LECTURA DE DATOS
 
 ```{r}
 BD_General <- read_excel("BD_General.xlsx", 
@@ -49,16 +55,35 @@ BD_General <- read_excel("BD_General.xlsx",
         "text"))
 BD_General
 ```
-Se seleccionan las variables sobre las cuales se aplicará PCA
+# II ANÁLISIS EXPLORATORIO
+
+Se seleccionan las variables que vamos a trabajar
 ```{r}
 BD_EP1 <- BD_General %>% 
   
-  dplyr::select( Edad_r, Sexo, Condicion_Corporal, DM_FLc2022)%>% 
-  rename(Edad_Real= Edad_r, Diametro_Fibra = DM_FLc2022) 
-  
+  dplyr::select( Edad_r, Sexo, Condicion_Corporal, DM_FLc2022, FM)%>% 
+  rename(Edad_Real= Edad_r, Diametro_Fibra = DM_FLc2022, Finura_Fibra=FM)
+
+  BD_EP1 <- na.omit(BD_EP1)
 BD_EP1
+
+
 ```
 Se cuenta con 4 variables y 1474 observaciones, donde cada observación corresponde a la descripción de cada llama segun el sexo, la edad, la condicion corporal y la calidad de la fibra
+
+#summarize del dataset, distribución, boxplot
+```{r}
+summary(BD_EP1)
+```
+
+Usamos la libreria DataExplorer(Cui, 2020) para obtener una grafica que detecte los % de datos perdidos
+
+```{r}
+plot_missing(BD_EP1, ggtheme=theme_bw())+
+               labs(tittle="Datos perdidos por variable",
+                    y="Datos peridos",
+                    x="Variables") 
+```
 
 
 Análisis de la población muestra
@@ -76,9 +101,7 @@ gt() %>%
   tab_header(title = "Cantidad y Porcentaje de animales según edad")
 BD_EAg
 ```
-```{r}
 
-```
 
 ### Gráfico de la Composición de la tropa según Edad
 ```{r}
@@ -112,22 +135,6 @@ gt() %>%
 ```
 
 
-
-
-
-### Frecuencia y Porcentaje de Finura de Fibra
-```{r}
- # BD_EP1 %>% 
- #   group_by(FM) %>%   #esta variable no la estamos trabajando
- #   summarise(cantidad = n()) %>%  
- #   mutate(proporcion = cantidad/sum(cantidad)*100, proporcion=round(proporcion, 2) ) %>%  
- # gt() %>% 
- # tab_header(title = "Frecuencia y Porcentaje de Finura de Fibra") 
-```
-
-
-
-
 ### Tabla de Finura de Fibra y Condición Corporal
 
 ```{r}
@@ -146,7 +153,7 @@ gt() %>%
   tab_header(title = "Frencuencia y Porcentaje de Machos, Hembras y Capones")
   
 ```
-std.error(BD_EP)
+
 ```{r}
 BD_EP4 |> 
   group_by(Sexo) |> 
@@ -162,22 +169,21 @@ BD_EP4 |>
 ```{r}
 
 
-BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra", "Edad_Real")%>%
-  group_by(Edad_Real)%>%
-  summarise(Frecuencia=length(Condicion_Corporal), 
-            Media_CC=mean(Condicion_Corporal,na.rm = TRUE),Media_CC=round(Media_CC, 2), 
-            #promedio_peso = round(mean(masa_corporal_g/1000, na.rm = TRUE), 2))
-            Media_DF=mean(Diametro_Fibra,na.rm = TRUE),Media_DF=round(Media_DF, 2),
-            Desvio_CC=sd(Condicion_Corporal,na.rm = TRUE),Desvio_CC=round(Desvio_CC, 2),
-            Desvio_DF=sd(Diametro_Fibra,na.rm = TRUE),Desvio_DF=round(Desvio_DF, 2),
-            Max_CC=max(Condicion_Corporal,na.rm = TRUE),Max_CC=round(Max_CC, 2),
-            Max_DF=max(Diametro_Fibra,na.rm = TRUE),Max_DF=round(Max_DF, 2),
-            Min_CC=min(Condicion_Corporal,na.rm = TRUE),Min_CC=round(Min_CC, 2),
-            Min_DF=min(Diametro_Fibra,na.rm = TRUE),Min_DF=round(Min_DF, 2),
-            Varianza_CC=var(Condicion_Corporal,na.rm = TRUE),Varianza_CC=round(Varianza_CC, 2),
-            Varianza_DF=var(Diametro_Fibra,na.rm = TRUE),Varianza_DF=round(Varianza_DF, 2))
-  
-BD_EP2
+# BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra", "Edad_Real")%>%
+#   group_by(Edad_Real)%>%
+#   summarise(Frecuencia=length(Condicion_Corporal), 
+#             Media_CC=mean(Condicion_Corporal,na.rm = TRUE),Media_CC=round(Media_CC, 2), 
+#             Media_DF=mean(Diametro_Fibra,na.rm = TRUE),Media_DF=round(Media_DF, 2),
+#             Desvio_CC=sd(Condicion_Corporal,na.rm = TRUE),Desvio_CC=round(Desvio_CC, 2),
+#             Desvio_DF=sd(Diametro_Fibra,na.rm = TRUE),Desvio_DF=round(Desvio_DF, 2),
+#             Max_CC=max(Condicion_Corporal,na.rm = TRUE),Max_CC=round(Max_CC, 2),
+#             Max_DF=max(Diametro_Fibra,na.rm = TRUE),Max_DF=round(Max_DF, 2),
+#             Min_CC=min(Condicion_Corporal,na.rm = TRUE),Min_CC=round(Min_CC, 2),
+#             Min_DF=min(Diametro_Fibra,na.rm = TRUE),Min_DF=round(Min_DF, 2),
+#             Varianza_CC=var(Condicion_Corporal,na.rm = TRUE),Varianza_CC=round(Varianza_CC, 2),
+#             Varianza_DF=var(Diametro_Fibra,na.rm = TRUE),Varianza_DF=round(Varianza_DF, 2))
+#   
+# BD_EP2
 ```
 ```{r}
 BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra", "Edad_Real")
@@ -192,6 +198,20 @@ ggplot(BD_EP1, aes(x=Edad_Real, y=Diametro_Fibra)) +
  
   
 ```
+# creando intervalos de la variable Condición Corporal
+
+
+```{r}
+CC1 <- cut(BD_EP1$Condicion_Corporal, breaks = 4)
+CC1
+
+
+```
+
+```{r}
+plot(CC1, col=rainbow(8), lwd = 8, main = "Intervalos de Condición Corporal")
+```
+
 
 ```{r}
 ggplot(BD_EP1, aes(x=Edad_Real, y=Diametro_Fibra)) +
@@ -203,13 +223,10 @@ ggplot(BD_EP1, aes(x=Edad_Real, y=Diametro_Fibra)) +
 ggplot(BD_EP1, aes(x=Edad_Real, y=Diametro_Fibra)) +
   geom_violin(aes(color = Edad_Real, fill = Edad_Real))
 ```
-#
+ La Condición Corporal de los machos se puede calificar de ............, la importancia del análisis es poder concluir si se encuentran en condiciones de servir como promedio de 30 hembras.
 
 
-La Condición Corporal de los machos se puede calificar de ............, la importancia del análisis es poder concluir si se encuentran en condiciones de servir como promedio de 30 hembras.
-
-
-### Analizar la Condición Corporal de los machos
+ Analizar la Condición Corporal de los machos
 
 ```{r}
 BD_EP2 <- dplyr::select(BD_EP1, "Condicion_Corporal", "Diametro_Fibra")
@@ -226,7 +243,8 @@ group_by(Condicion_Corporal) %>%
   gt() %>%
   tab_header(title = "Promedio de Condición Corporal, Finura de Fibra")
 ```
-  ## *****************************************Dataset
+  
+## *****************************************Dataset
 ##ESTRUCTURA
 #visualizo dataset, primera impresión
 
@@ -285,10 +303,7 @@ hist(BD_EP1$Diametro_Fibra,
 
 ```
 
-#summarize del dataset, distribución, boxplot
-```{r}
-summary(BD_EP1)
-```
+
 
 
 #calculo medias
@@ -301,7 +316,7 @@ BD_EP1_means <- aggregate(BD_EP1$Condicion_Corporal,
 
 #boxplots comparados =)
 ```{r}
-boxplot(BD_EP1$Condicion_Corporal ~ BD_EP1$Edad_Real,    
+boxplot(BD_EP1$Condicion_Corporal ~ BD_EP1$Finura_Fibra,    
         col = 1:3)
 points(x = 1:nrow(BD_EP1_means),
        y = BD_EP1_means$x,
@@ -316,7 +331,7 @@ text(x = 1:nrow(BD_EP1_means),
 
 #boxplot
 ```{r}
-boxplot(Condicion_Corporal~Edad_Real,
+boxplot(Condicion_Corporal~Finura_Fibra,
         data=BD_EP1,
         main='Condición Corporal (C) según Edad_Real',
         xlab='Edad_Real',
@@ -326,20 +341,21 @@ boxplot(Condicion_Corporal~Edad_Real,
 
 ```
 
+
 #boxplots con ggplot
 #detalles en: https://www.datanovia.com/en/blog/ggplot-aes-how-to-assign-aesthetics-in-ggplot2/
 
 ```{r}
 ggplot(BD_EP1,                                  
-       aes(x = Edad_Real,
+       aes(x = Finura_Fibra,
            y = Condicion_Corporal,
-           fill = Edad_Real)) +
+           fill = Finura_Fibra)) +
   geom_boxplot() +
   stat_summary(fun = mean,
-               col = "white",
+               col = "black",
                geom = "point") +
   stat_summary(fun = mean,
-               col = "white",
+               col = "black",
                geom = "text",
                vjust = - 1,
                aes(label = round(..y.., digits = 2)))
@@ -349,7 +365,7 @@ ggplot(BD_EP1,
 
 #scatterplot 
 ```{r}
-plot(BD_EP1$Diametro_Fibra, BD_EP1$Condicion_Corporal,
+plot( BD_EP1$Condicion_Corporal, BD_EP1$Diametro_Fibra,
      col='steelblue',
      main='Scatterplot',
      xlab='Diametro Fibra (D)',
@@ -357,14 +373,15 @@ plot(BD_EP1$Diametro_Fibra, BD_EP1$Condicion_Corporal,
      pch=19)
 ```
 
+```{r}
+ggplot(BD_EP1, aes(Condicion_Corporal, Diametro_Fibra)) +
+  geom_point(aes(shape = Edad_Real))
+```
 
 
 ## ****************************************Clustering con K-Means
 ## Dar un parámetro K: # de centroides
-## Cómo lo calculo?
 
-# el gráfico de dispersión puede ayudar a 
-# identificar grupos y relaciones
 
 ```{r}
 ggplot(BD_EP1, aes(Condicion_Corporal,Diametro_Fibra )
@@ -374,22 +391,21 @@ ggplot(BD_EP1, aes(Condicion_Corporal,Diametro_Fibra )
 
 
 
-# con tonos según especie
+# con tonos según Edad Real
 
 ```{r}
 ggplot(BD_EP1, aes(Condicion_Corporal,Diametro_Fibra)
        ) + geom_point(aes(col=Edad_Real), size=4)
 ```
-# SETOSA se agrupará más fácilmente
-# (también se diferencia más facilmente)
-# VERSICOLOR y VIRGICA, similares? unidas? las mismas?
+
 
 # K-Means ya está incluido
 # fijo una semilla
 ```{r}
-set.seed(500)
+set.seed(50)
 ```
 # modelo con un k=2
+El codigo no corre porque hay un dato nulo en la columna diametro_fibra fila 74 y no sabemos como ignorar ese dato
 ```{r}
 BD_EP1Cluster2 <- kmeans(BD_EP1[,3:4], center=2, iter.max=10, nstart=20)
 BD_EP1Cluster2
@@ -435,7 +451,7 @@ BD_EP1Cluster5
 # Comparo 1 vector predicho y las etiquetas originales
 
 ```{r}
-table(BD_EP1Cluster2$cluster, BD_EP1$Edad_Real)
+table(BD_EP1Cluster2$cluster, BD_EP1$Finura_Fibra)
 clusplot(BD_EP1, BD_EP1Cluster2$cluster, color=T, shade=T, labels=0, lines=0)
 ```
 
@@ -443,18 +459,24 @@ clusplot(BD_EP1, BD_EP1Cluster2$cluster, color=T, shade=T, labels=0, lines=0)
 # K=3
 # Comparo 1 vector predicho y las etiquetas originales
 ```{r}
-table(BD_EP1Cluster3$cluster, BD_EP1$Edad_Real)
+table(BD_EP1Cluster3$cluster, BD_EP1$Finura_Fibra)
 clusplot(BD_EP1, BD_EP1Cluster3$cluster, color=T, shade=T, labels=0, lines=0)
 ```
 
 # K=5
 # Comparo 1 vector predicho y las etiquetas originales
 ```{r}
-table(BD_EP1Cluster5$cluster, BD_EP1$Edad_Real)
+table(BD_EP1Cluster5$cluster, BD_EP1$Finura_Fibra)
 clusplot(BD_EP1, BD_EP1Cluster5$cluster, color=T, shade=T, labels=0, lines=0)
 ```
+```{r}
+pam.res <- pam(BD_EP1, 5)
+# Visualize
+fviz_cluster(pam.res)
+```
 
-"Qué observamos de cada especie?
+
+"Qué observamos?
  Todas están explicadas por igual?
  Cómo vemos los aciertos?"
 
@@ -475,6 +497,37 @@ for (i in 1:15){
 ```{r}
 plot(1:15, tot.withinss, type="b", pch=19)
 ```
-  
 
+```{r}
+hist(BD_EP1) + theme_bw()
+```
+  
+```{r}
+#Calculando la matriz de distancia euclidiana con la
+#funcion get_dist()
+res.dist <- get_dist(BD_EP1, stand = FALSE, 
+                     method = "euclidean")
+
+# Visualizando un subconjunto de la matriz de distancia
+round(as.matrix(res.dist)[1:5, 1:5], 1)
+```
+
+
+```{r}
+fviz_dist(res.dist, gradient = list(low = "#00AFBB", mid = "white", high = "#FC4E07"))
+```
+```{r}
+data("BD_EP1")
+#BD_EP1 <- na.omit(BD_EP1)
+my_data <- scale(BD_EP1)
+# 2. Compute dissimilarity matrix
+d <- dist(my_data, method = "euclidean")
+# Hierarchical clustering using Ward's method
+res.hc <- hclust(d, method = "ward.D2" )
+# Cut tree into 4 groups
+grp <- cutree(res.hc, k = 4)
+# Visualize
+plot(res.hc, cex = 0.6) # plot tree
+rect.hclust(res.hc, k = 4, border = 2:5) # add rectangle
+```
 
