--- a/Estructura Poblacional2.Rmd
+++ b/Estructura Poblacional2.Rmd
@@ -531,3 +531,10 @@ plot(res.hc, cex = 0.6) # plot tree
 rect.hclust(res.hc, k = 4, border = 2:5) # add rectangle
 ```
 
+```{r}
+res <- hcut(BD_EP1, k = 4, stand = TRUE)
+# Visualize
+fviz_dend(res, rect = TRUE, cex = 0.5,
+          k_colors = c("#00AFBB","#2E9FDF", "#E7B800", "#FC4E07"))
+```
+
