--- a/Estructura Poblacional2.Rmd
+++ b/Estructura Poblacional2.Rmd
@@ -512,10 +512,12 @@ res.dist <- get_dist(BD_EP1, stand = FALSE,
 round(as.matrix(res.dist)[1:5, 1:5], 1)
 ```
 
-
 ```{r}
-fviz_dist(res.dist, gradient = list(low = "#00AFBB", mid = "white", high = "#FC4E07"))
+my_data <- scale(BD_EP1[, -5])
+get_clust_tendency(my_data, n = 50,
+                   gradient = list(low = "#00AFBB", mid = "white", high = "#FC4E07"))
 ```
+
 ```{r}
 data("BD_EP1")
 #BD_EP1 <- na.omit(BD_EP1)
@@ -536,5 +538,14 @@ res <- hcut(BD_EP1, k = 4, stand = TRUE)
 # Visualize
 fviz_dend(res, rect = TRUE, cex = 0.5,
           k_colors = c("#00AFBB","#2E9FDF", "#E7B800", "#FC4E07"))
+```
+
+
+
+```{r}
+set.seed(123)
+res.nbclust <- NbClust(my_data, distance = "euclidean",
+                  min.nc = 2, max.nc = 10, 
+                  method = "complete", index ="all") 
 ```
 
